name:                Yggdrasil
version:             0.1.0.0
synopsis:            The tree of life
-- description:
homepage:            github.com/mbrock/Yggdrasil
license:             GPL
-- license-file:        LICENSE
author:              Mikael Brockman
maintainer:          phubub@gmail.com
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable Yggdrasil
  main-is:           Yggdrasil.hs
  -- other-modules:
  build-depends:     base ==4.6.*,
                     transformers ==0.3.*,
                     text ==0.11.*,
                     stm ==2.4.*,
                     containers ==0.5.*,
                     bytestring ==0.10.*,
                     scotty,
                     aeson,
                     websockets,
                     wai-middleware-static,
                     wai-extra
