name:                Yggdrasil
version:             0.1.0.0
synopsis:            The tree of life
-- description:
homepage:            github.com/mbrock/Yggdrasil
license:             GPL
-- license-file:        LICENSE
author:              Mikael Brockman
maintainer:          phubub@gmail.com
-- copyright:
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable Yggdrasil
  main-is:           Yggdrasil.hs
  -- other-modules:
  build-depends:     base >= 4.5,
                     transformers == 0.3.*,
                     mtl >= 2.1,
                     text == 0.11.*,
                     stm == 2.4.*,
                     containers >= 0.4,
                     bytestring >= 0.9,
                     ghc-prim >= 0.2,
                     uuid >= 1.2.9,
                     time >= 1.4,
                     hslogger,
                     scotty,
                     aeson,
                     websockets,
                     wai-middleware-static,
                     wai-extra,
                     amqp
